site/htdocs/avanty/style/cash.css
#cash-sections .shell-menu {
	width: 40%;
	left: 30%;
}

#cash-sections .shell-menu li {
	width: calc(100% / 2 - 5px);
}

#cash-sections .shell-menu li:first-child {
	width: calc(100% / 2);
}

#cash-sections .shell .username {
	display: inline-block;
	width: calc(100% - 31px);
	overflow: hidden;
	text-align: center;
	line-height: 16px;
}

#cash-main > div {
	text-align: center;
}

#cash-main-othershift img, #cash-main-noshift img {
	width: 48px;
	height: 48px;
	padding-right: 0.5em;
	vertical-align: bottom;
}

#cash-main-noshift button {
	display: block;
	margin: 1em auto 0 auto;
}

#cash-main-othershift span {
	font-style: italic;
}

input[name="shift-begin-amount"] {
	width: 8ex;
}

.cash-park-charge table {
	border-spacing: 0;
}

.cash-park-charge th {
	padding: 0;
	white-space: nowrap;
}

.cash-park-charge thead th {
	padding-left: 0.25em;
	padding-right: 0.25em;
}

.cash-park-charge tbody td, .cash-park-charge tfoot td {
	position: relative;
	padding: 0;
	text-align: right;
}

.cash-park-charge table .money {
	width: 9ex;
}

.cash-park-charge tbody th, .cash-park-charge tfoot th {
	padding-top: 0.5em;
	text-align: right;
}

.cash-park-charge tbody th span:after {
	content: ':';
}

.cash-park-charge tbody td.qty {
	text-align: center;
}

.cash-park-charge table .money span {
	display: inline-block;
	width: 9ex;
	padding-left: 8px;
	padding-right: 8px;
}

.cash-park-charge tbody tr:last-child > * {
	padding-bottom: 0.5em;
}

.cash-park-charge tfoot tr:first-child > * {
	border-top: 1px solid black;
}

.cash-park-charge tfoot td[colspan="6"] {
	padding-top: 1.5em;
	text-align: right;
}

.cash-park-charge h4 {
	width: 95%;
	height: 3em;
	line-height: 4.5em;
	margin-bottom: 0;
	text-align: left;
	border-bottom: 1px solid lightgray;
}

.cash-park-charge > table {
	
}

.cash-park-charge > table td {
	text-align: left;
	vertical-align: bottom;
}

.cash-park-charge > table th {
	padding-left: 2ex;
	padding-right: 1ex;
}

.cash-park-charge > table th:first-child {
	padding-left: 0;
}


.cash-park-charge button {
	margin-left: 1ex;
}

.cash-park-charge button:first-child {
	margin-left: 0;
}

#cash-park-lost {
	margin-top: 0;
}

#cash-park-lost button[type="submit"] {
	margin-top: 1em;
}

#cash-shift-end td:first-child {
	padding-right: 1em;
}

#cash-shift-end th {
	padding-right: 1ex;
}

#cash-shift-end table .money {
	text-align: right;
	line-height: unset;
	width: auto;
}

#cash-shift-end td.tickets {
	text-align: left;
}

#cash-shift-end > div {
	margin-top: 2em;
}

#cash-shift-end > div button {
	margin-left: 1ex;
}

#cash-shift-end > div button:first-child {
	margin-left: 0;
}

